// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel basic 1`] = `
.c11 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c11 *[stroke*="#"],
.c11 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*="#"],
.c11 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c16 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #865CD6;
  stroke: #865CD6;
}

.c16 g {
  fill: inherit;
  stroke: inherit;
}

.c16 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c16 *[stroke*="#"],
.c16 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c16 *[fill-rule],
.c16 *[FILL-RULE],
.c16 *[fill*="#"],
.c16 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
  opacity: 1;
  -webkit-animation: gmgyXe 1s 0s forwards;
  animation: gmgyXe 1s 0s forwards;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  margin: 0;
  padding: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: 0;
  padding: 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding: 12px;
}

.c9 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  width: 100%;
  height: 100%;
  max-width: none;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c14 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c17 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  width: 100%;
  height: 100%;
  max-width: none;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c17:hover {
  background-color: rgba(221,221,221,0.5);
  color: #000000;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

@media only screen and (max-width:699px) {
  .c3 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c10 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c10 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c12 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c12 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c13 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c13 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c15 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c15 {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .c9 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c14 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c17 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <img
            className=""
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c3"
      >
        <div
          className="c6"
        >
          <img
            className=""
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c7"
        tabIndex="0"
      >
        <div
          className="c8"
        >
          <button
            className="c9"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            type="button"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Previous"
                className="c11"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <button
              className="c14"
              disabled={false}
              icon={
                <Subtract
                  color="brand"
                />
              }
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <div
                className="c15"
              >
                <svg
                  aria-label="Subtract"
                  className="c16"
                  color="brand"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    strokeWidth="2"
                  />
                </svg>
              </div>
            </button>
            <button
              className="c14"
              disabled={false}
              icon={<Subtract />}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <div
                className="c15"
              >
                <svg
                  aria-label="Subtract"
                  className="c11"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    strokeWidth="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          className="c8"
        >
          <button
            className="c17"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            type="button"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Next"
                className="c11"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
    data-testid="test-carousel"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih jgyIuE"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy gmORNl"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy bmJKbr"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy fIqOHC"
        tabindex="0"
      >
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY keldPn"
            disabled=""
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Previous"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="StyledBox-YaZNy iUTEKM"
        >
          <div
            class="StyledBox-YaZNy iiDxEC"
          >
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT bAonn"
                  color="brand"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT fAeuhQ"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY jYTBlN"
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Next"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 2`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
    data-testid="test-carousel"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy bmJKbr"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih jgyIuE"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy edmQne"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy fIqOHC"
        tabindex="0"
      >
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY jYTBlN"
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Previous"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="StyledBox-YaZNy iUTEKM"
        >
          <div
            class="StyledBox-YaZNy iiDxEC"
          >
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT fAeuhQ"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT bAonn"
                  color="brand"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY keldPn"
            disabled=""
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Next"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 3`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
    data-testid="test-carousel"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih jgyIuE"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy bJiauH"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy bmJKbr"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy fIqOHC"
        tabindex="0"
      >
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY keldPn"
            disabled=""
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Previous"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="StyledBox-YaZNy iUTEKM"
        >
          <div
            class="StyledBox-YaZNy iiDxEC"
          >
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT bAonn"
                  color="brand"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT fAeuhQ"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY jYTBlN"
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Next"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel play 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih jgyIuE"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy gmORNl"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy bmJKbr"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy fIqOHC"
        tabindex="0"
      >
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY keldPn"
            disabled=""
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Previous"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="StyledBox-YaZNy iUTEKM"
        >
          <div
            class="StyledBox-YaZNy iiDxEC"
          >
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT bAonn"
                  color="brand"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT fAeuhQ"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY jYTBlN"
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Next"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel play 2`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy bmJKbr"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih jgyIuE"
    >
      <div
        class="StyledBox-YaZNy ckhajF"
      >
        <div
          class="StyledBox-YaZNy edmQne"
        >
          <img
            class="StyledImage-dKPlqa cdkiLG"
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih eyVbLW"
    >
      <div
        class="StyledBox-YaZNy fIqOHC"
        tabindex="0"
      >
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY jYTBlN"
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Previous"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="StyledBox-YaZNy iUTEKM"
        >
          <div
            class="StyledBox-YaZNy iiDxEC"
          >
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT fAeuhQ"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
            <button
              class="StyledButton-qbvYY kidNzX"
              icon="[object Object]"
              type="button"
            >
              <div
                class="StyledBox-YaZNy dhtbUp"
              >
                <svg
                  aria-label="Subtract"
                  class="StyledIcon-hcpUvT bAonn"
                  color="brand"
                  height="24px"
                  role="img"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M2,12 L22,12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          class="StyledBox-YaZNy cjgBtZ"
        >
          <button
            class="StyledButton-qbvYY keldPn"
            disabled=""
            type="button"
          >
            <div
              class="StyledBox-YaZNy bRWbjn"
            >
              <svg
                aria-label="Next"
                class="StyledIcon-hcpUvT fAeuhQ"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
